It compiles! Many of the tests fail horribly, but at least they're running again.